# open-speech

./: .gitignore  Dockerfile  FIXES.md  README.md  pyproject.toml
src/: main.py  streaming.py
src/realtime/: server.py
src/routes/: __init__.py  batch.py  health.py  models.py  realtime.py  streaming.py  stt.py  studio.py  tts.py  web.py
src/services/: __init__.py  batch.py  models.py  stt.py  tts.py
src/tts/: pipeline.py  router.py
src/wyoming/: server.py
tests/: test_docker_gpu.py
